css/main.css
@import 'reset.css';
@import url('https://fonts.googleapis.com/css2?family=Lobster&family=PT+Sans:wght@400;700&display=swap');

/* font-family: 'Lobster', cursive; */


body{
    font-family: 'PT Sans', sans-serif;
}

.container {
    width: 1170px;
    margin: 0 auto;
}

.none {
    display: none;
}

/* Header */
.header{
    position: relative;

    height: 800px;

    background-color: #265847;
    background-image: url(./../img/header/header-bg.jpg);
    background-position: center;
    background-size: cover;

    padding-top: 50px;

    color: #FFFFFF
}

.header-inner{
    display: flex;
    align-items: center;

    height: 100px;

    background-color: #265847;
    background-image: url(./../img/header/header-small-bg.jpg);
    background-position: center;
    background-size: cover;

    color: #FFFFFF
}

.header-row{
    display: flex;
    justify-content: space-between;
    align-items: center;

    width: 1170px;

    margin: 0 auto;
}

.logo{
    font-family: 'Lobster', cursive;
    font-size: 40px; 
}

.header-nav{
    font-size: 22px;
}

.header-nav-list{
    display: flex;  
}

.header-nav-list a:hover{
    text-decoration: underline;
}

.header-nav-item:not(:last-child){
    margin-right: 50px;
}

.header-content{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    width: 1170px;

    text-align: center;
}

.header-title{
    font-weight: 700;
    font-size: 60px;

    margin-bottom: 20px;
}

.header-content p{
    font-size: 24px;
}

.header-scroll{
    position: absolute;
    bottom: 25px;
    left: 50%;
    transform: translateX(-50%);

    padding-bottom: 34px;

    font-size: 16px;
}

.header-scroll:hover{
    text-decoration: underline;
}

.header-scroll::after{
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);

    content: "";
    display: inline-block;
    width: 25px;
    height: 25px;

    background-image: url(./../img/header/arrow-down.svg);
}

/* Main */

.main{
    padding-top: 120px;
    padding-bottom: 120px;

}

.main-row{
    display: flex;
    justify-content: space-between;
}

.main-row:not(:last-child){
    margin-bottom: 120px;
}

.main-row:nth-child(even){
    flex-direction: row-reverse;
}

.main-content {
    width: 470px;

    color: #FFFFFF;
}

.main-content-title {
    margin-bottom: 20px;

    font-weight: 700;
    font-size: 54px;
    color: #31405B;
}

.main-content-text {
    margin-bottom: 40px;

    font-size: 20px;
    line-height: 1.6;
    color: #31405B;
}

.main-content-text p{
    margin-bottom: 15px;
}

.main-content-text a{
    color: #138ECE;
    text-decoration: underline;
}

.main-content-btn {
    width: 180px;
    height: 50px;

    background: #0AC883;
    box-shadow: 0px 8px 20px rgba(24, 219, 148, 0.35);
    border-radius: 50px;

    font-weight: 700;
    font-size: 20px;
    line-height: 50px;
    text-align: center;
}

.main-content-btn:hover{
    text-decoration: underline;
}

/* Footer */

.footer {
    padding-top: 70px;
    padding-bottom: 90px;

    background-color: #265847;

    color: #FFFFFF;
}

.footer-row {
    display: flex;
    justify-content: space-between;
}

.footer-widget-wrapper{
    display: flex;

    padding-top: 10px;
}

.footer-copyright {
    width: 270px;
}

.footer-copyright p{
    font-size: 16px;
    line-height: 1.6;
}

footer .logo {
    margin-bottom: 26px;
}

.footer-widget-info{
    width: 170px;
}

.footer-widget-services, .footer-widget-contacts{
    width: 270px;
}

.footer-widget + .footer-widget {
    margin-left: 30px;
}

.footer-widget-title {
    margin-bottom: 30px;

    font-weight: 700;
    font-size: 24px;
}

.footer-widget-list {
    font-size: 18px;
}

.footer-widget-list a:hover{
    text-decoration: underline;
}

.footer-widget-items {
    margin-bottom: 15px;
}

/* Inner page */

.inner-page-tours{
    padding-top: 60px;
    padding-bottom: 100px;

    background-color: #F2F8F6;
}

.inner-page-tours-header{
    margin-bottom: 60px;

    text-align: center;
}

/* Card */

.cards-row {
    display: flex;
    justify-content: space-between;
}


.cards-row:not(:last-child){
    margin-bottom: 30px;
}

.cards-row-column{
    display: flex;
    flex-direction: column;
     row-gap: 30px; /* Отступ между рядами через свойство флексбокс */
}

/* Отступ сверху через выбор элемента у которого есть соседний элемент слева, только для него сработает отступ
   Знак > выбирает элементы первого уровня вложенности, 
   Знак * означает что необходимо выбрать все элементы первого уровня вложенности 
   (можно вместо * указать div, тогда будут выбраны только div первого уровня вложенности */
/* .cards-row-column > * + *{  
    margin-top: 30px;
}  */

.tours-description {
    display: flex;
    align-items: center;

    height: 80px;

    padding-left: 30px;
    padding-right: 30px;

    overflow: hidden;
    white-space: nowrap;
}

.card.gray-color {
    width: 570px;
    height: 435px;

    background-color: #A6A6A6;
}

.card.sand-color{
    width: 570px;
    height: 435px;

    background-color: #C1B19B;
}

.card.blue-color{
    width: 670px;
    height: 365px;

    background-color: #66B0BE;
}

.card.brown-color{
    width: 670px;
    height: 365px;

    background-color: #876F56;
}

.card.green-color{
    width: 470px;
    height: 760px;

    background-color: #27695E;
}

.tours-description-title {
    font-weight: 700;
    font-size: 28px;

    overflow: hidden;
    text-overflow: ellipsis;

    color: #FFFFFF;
}

.cards-row a:hover{
   position: relative;
   bottom: 3px;

   opacity: 0.8;
}

.cards-row a:active{
    position: relative;
    top: 6px;
 } 

